<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_ErrorId" Id="{83c8117b-addc-4864-8fd8-2c13fc05b90a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ErrorId :
(
	PASSIVE_ABORT := 16#FFFFFFFF,
	NOT_CONTAINER := 16#FFFFFFFE
) UDINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>